[package]
name = "turtl"
version = "0.1.0"
authors = ["Andrei Amatuni <andrei.amatuni@gmail.com>"]
license = "GPL-3.0"

[dependencies]
termion = "*"
tiny-keccak = "1.4.2"
serde_cbor = "0.8.2"
serde = "*"
serde_derive = "*"
actix = "*"
actix-web = "*"
ctrlc = { version = "3.0", features = ["termination"] }
ipfsapi = "0.2"
num-traits = "0.2"
num-derive = "0.2"